java8.spoofax3/test/statics/java/classes/nested/qualifiedthis.no.spt.bak
module classes/nested/qualifiedthis_no

language metaborg-java

test qualifiedthis [[

test;



// error: A\.B cannot be converted to A

[A]
public class A {
    public class B {
        public void m() {
             A a = B.this;
        }
    }
}

]] analysis fails
   run javacFails to ""
